--- a/index.html
+++ b/index.html
@@ -6,15 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css" />
     <script src="server.js"></script>
-    <title>8bit Diner</title>
+    <title>8bit City Street</title>
 </head>
 <body>
-    <h1 id="neon">Open</h1>
-
-<div class="button-wrapper">
-  <button id="close">Close</button>
-  <button id="open">Open</button>
-</div>
-    
 </body>
 </html>
